--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,6 @@
   <EmberTable as |t|>
-    <t.head @columns={{this.columns}} />
+    <t.head @columns={{this.columns}} 
+      @sorts={{this.sorts}}
+      @onUpdateSorts={{action (mut this.sorts)}}/>
     <t.body @rows={{@model}} />
   </EmberTable>
