--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,7 @@
   <EmberTable as |t|>
     <t.head @columns={{this.columns}} 
       @sorts={{this.sorts}}
+      @widthConstraint="eq-container"
       @onUpdateSorts={{action (mut this.sorts)}}/>
     <t.body @rows={{@model}} />
   </EmberTable>
