--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,2 +1,8 @@
 <h1>hardclimbs.info</h1>
+<h3>
+  This site began in 2013 as an effort to catalogue hard climbs done around the world. <br />
+  The project stalled in 2019 and the site broke in 2021. <br />
+  What remains is this list that was compiled over the years. Enjoy. <br />
+  <a href="mailto:hardclimbsinfo@gmail.com">Get in touch</a>
+</h3>
 {{outlet}}
