--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,5 @@
   <EmberTable as |t|>
+    {{!-- template-lint-disable no-action  --}}
     <t.head @columns={{this.columns}} 
       @sorts={{this.sorts}}
       @widthConstraint="eq-container"
