--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,7 @@
-<h1><a href="https://hardclimbs.info">hardclimbs.info</a></h1>
+<div class="container">
+  <h1 class="text-4xl">
+    <a href="https://hardclimbs.info">hardclimbs.info</a>
+  </h1>
 
-{{outlet}}
+  {{outlet}}
+</div>
