--- a/app/templates/ascents/ascent.hbs
+++ b/app/templates/ascents/ascent.hbs
@@ -4,7 +4,7 @@
 
 <h4>Here are some links to more information:</h4>
 
-<ul>
+<ul class="list-disc list-inside">
   {{#each @model as |media|}}
     <li>
       <a href="{{media.url}}" target="_blank" rel="noopener noreferrer">
