--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,5 +7,33 @@
 /* @import "utilities.css"; */
 
 .ember-table {
-  @apply table-auto;
+  @apply table-auto min-w-full divide-y divide-gray-200;
+}
+
+table {
+  @apply min-w-full divide-y divide-gray-200 bg-white rounded-md;
+}
+
+th {
+  @apply px-6 py-3 text-left font-medium text-gray-500 uppercase tracking-wider;
+}
+
+tbody {
+  @apply divide-y divide-gray-200;
+}
+
+td {
+  @apply px-6 py-4;
+}
+
+.et-sort-toggle {
+  @apply hidden;
+}
+
+a {
+  @apply text-h-red hover:text-h-black;
+}
+
+body {
+  @apply bg-h-gray;
 }
