--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,4 @@
-<h3>
+<h3 class="pb-5">
   This site began in 2013 as an effort to catalogue hard climbs done around the world. <br />
   The project stalled in 2019 and the site broke in 2021. <br />
   What remains is this list that was compiled over the years. Enjoy. <br />
