--- a/app/templates/ascents/ascent.hbs
+++ b/app/templates/ascents/ascent.hbs
@@ -32,7 +32,7 @@
           Links
         </dt>
         <dd class="mt-1 sm:mt-0 sm:col-span-2">
-          <ul class="border border-gray-200 rounded-md divide-y divide-gray-200">
+          <ul class="list-disc list-inside">
             {{#each @model as |media|}}
               <li class="pl-3 pr-4 py-3 flex items-center justify-between">
                 <div class="w-0 flex-1 flex items-center">
