--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<div class="container max-w-7xl mx-auto sm:px-6 lg:px-8">
+<div class="container max-w-7xl mx-auto sm:px-6 lg:px-8 px-6">
   <h1 class="text-4xl py-5">
     <a href="https://hardclimbs.info">hardclimbs.info</a>
   </h1>
