--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,7 @@
-<h1><a href="https://hardclimbs.info">hardclimbs.info</a></h1>
+<div class="container max-w-7xl mx-auto sm:px-6 lg:px-8 px-6">
+  <h1 class="text-4xl py-5">
+    <a href="https://hardclimbs.info">hardclimbs.info</a>
+  </h1>
 
-{{outlet}}
+  {{outlet}}
+</div>
