--- a/app/templates/ascents/ascent.hbs
+++ b/app/templates/ascents/ascent.hbs
@@ -3,35 +3,36 @@
 <div class="bg-white shadow overflow-hidden sm:rounded-lg text-lg">
   <div class="border-t border-gray-200">
     <dl>
-      <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+      <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-5 sm:gap-4 sm:px-6">
         <dt class="font-medium text-gray-500">
           Climber
         </dt>
-        <dd class="mt-1 sm:mt-0 sm:col-span-2">
+        <dd class="mt-1 sm:mt-0 sm:col-span-4">
           {{this.ascent.first_name}} {{this.ascent.last_name}}
         </dd>
       </div>
-      <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+      <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-5 sm:gap-4 sm:px-6">
         <dt class="font-medium text-gray-500">
           Climb
         </dt>
-        <dd class="mt-1 sm:mt-0 sm:col-span-2">
+        <dd class="mt-1 sm:mt-0 sm:col-span-4">
           {{this.ascent.climb}}
         </dd>
       </div>
-      <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+      <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-5 sm:gap-4 sm:px-6">
         <dt class="font-medium text-gray-500">
-          Date (approximate)
+          Date <br />
+          <i class="text-sm">could be approximate</i>
         </dt>
-        <dd class="mt-1 sm:mt-0 sm:col-span-2">
+        <dd class="mt-1 sm:mt-0 sm:col-span-4">
          {{this.ascent.date}}
         </dd>
       </div>
-      <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+      <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-5 sm:gap-4 sm:px-6">
         <dt class="font-medium text-gray-500">
           Links
         </dt>
-        <dd class="mt-1 sm:mt-0 sm:col-span-2">
+        <dd class="mt-1 sm:mt-0 sm:col-span-4">
           <ul class="list-disc list-inside">
             {{#each @model as |media|}}
               <li class="truncate">
